[gd_scene load_steps=10 format=3 uid="uid://c1ifct37mxsa6"]

[ext_resource type="Texture2D" uid="uid://deexv1yl5g64k" path="res://ui/widgets/sound_on.png" id="1_a2gr7"]
[ext_resource type="Script" path="res://ui/widgets/settins_bar.gd" id="1_e0hkt"]
[ext_resource type="Texture2D" uid="uid://bxk2xbqkqbmxo" path="res://ui/widgets/sound_off.png" id="3_qd02s"]

[sub_resource type="LabelSettings" id="LabelSettings_migvc"]
font_size = 30
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fri32"]
bg_color = Color(0.03, 0.03, 0.03, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2du6"]
bg_color = Color(0.201, 0.3, 0.2406, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kple5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oolit"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1ikb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="SettingsBar" type="MarginContainer"]
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5
script = ExtResource("1_e0hkt")
on_icon = ExtResource("1_a2gr7")
off_icon = ExtResource("3_qd02s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MUSIC"
label_settings = SubResource("LabelSettings_migvc")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2

[node name="Bar" type="ProgressBar" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_fri32")
theme_override_styles/fill = SubResource("StyleBoxFlat_m2du6")
step = 1.0
value = 50.0

[node name="SwitchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_kple5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oolit")
theme_override_styles/normal = SubResource("StyleBoxFlat_r1ikb")

[node name="SwitchIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/SwitchButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a2gr7")
